# hafen_bot

./: Cargo.toml  README.md  Rocket.toml
etc/: config.yaml
scripts/: map_db_to_image.py
src/: lib.rs  main.rs
src/bot/: bot.rs  clusterization.rs  common.rs  drinker.rs  exp_wnd_closer.rs  explorer.rs  map.rs  map_db.rs  math.rs  mod.rs  navigator.rs  new_character.rs  objects.rs  open_belt.rs  path_finder.rs  player.rs  process.rs  protocol.rs  scene.rs  server.rs  session.rs  sqlite_map_db.rs  stuck_detector.rs  use_item.rs  vec2.rs  visualization.rs  walk_grid.rs  world.rs
src/bot/actions/: mod.rs  move_item.rs  open_belt.rs  put_item.rs  take_item.rs  use_item.rs
src/bot/tasks/: drinker.rs  exp_wnd_closer.rs  explorer.rs  mod.rs  new_character.rs  path_finder.rs  task.rs
tests/: bot.rs
tests/input/: init_session_lake.json  init_session_start.json  new_session.json
