[package]
name = "hafen_bot"
version = "0.1.0"
authors = ["elsid <elsid.mail@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-service = "1.0.0"
env_logger = "0.7.1"
log = "0.4.11"
futures = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hexf = "0.1.0"
piston = "0.52.0"
piston2d-graphics = "0.37.0"
pistoncore-glutin_window = "0.66.0"
piston2d-opengl_graphics = "0.74.0"

[profile.release]
panic = "abort"
debug = true

[profile.dev]
panic = "abort"
